get_admirers() added to Store class
format_sales() removed from text_format.py

--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,8 @@
 
 # Ignore specific files and folders eithin "etsyscraper" folder #
 #################################################################
-etsyscraper/__pycache/
+etsyscraper/__pycache__/
 etsyscraper/Include/
 etsyscraper/Lib/
 etsyscraper/Scripts/
-etsyscraper/pyenv.cfg
+etsyscraper/pyvenv.cfg
